--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "nostr-react": "^0.6.4",
+    "nostr-tools": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
