--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.1.6",
     "moment": "^2.29.4",
     "next": "13.1.6",
+    "nostr-hooks": "^1.6.7",
     "nostr-react": "^0.6.4",
     "nostr-tools": "^1.2.1",
     "react": "18.2.0",
