--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "html-react-parser": "^4.0.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "nostr-hooks": "^1.6.7",
